2008-05-30  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audioconvert/gstaudioconvert.c:
	(structure_has_fixed_channel_positions),
	(gst_audio_convert_transform_caps):
	Allow up to 11 positioned channels now that audioconvert can handle
	this but add no default positions for > 8 channels.
	
	* tests/check/elements/audioconvert.c: (GST_START_TEST):
	Add some unit tests for the above change: Test conversion of
	11 positioned channels to stereo and the other way around, test
	conversion of 15 unpositioned channels in different ways.

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstaudio.def:
	Add gst_audio_clock_reset to the list of exported symbols.

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/vorbisdec.c: (vorbisdec_suite):
	Remove wrong_channels_identification_header unit test as we now
	support 7 (and more channels).

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/audioconvert/gstchannelmix.c:
	(gst_channel_mix_fill_one_other):
	If mixing left or right to center (or the other way around) only take
	the complete value if we don't already have the original position in
	the source.

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/audio/multichannel.c:
	(gst_audio_check_channel_positions),
	(gst_audio_set_structure_channel_positions_list),
	(gst_audio_fixate_channel_positions):
	Allow rear center together with rear left/right and other previously
	conflicting channel positions. The reason why they weren't allowed
	was the channel mixing implementation in audioconvert.
	Also take this into account when fixing channel layouts.

	Allow setting channel positions for 1/2 channels when using
	gst_audio_set_structure_channel_position().

	* gst/audioconvert/gstchannelmix.c:
	(gst_channel_mix_fill_compatible), (gst_channel_mix_detect_pos),
	(gst_channel_mix_fill_one_other), (gst_channel_mix_fill_others),